--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -17,8 +17,73 @@
     body {
       font-family: 'Inter', sans-serif;
       background-color: #f9fafb;
+      overflow-x: hidden;
     }
-    
+    .math-solution {
+    font-family: 'Inter', sans-serif;
+    line-height: 1.6;
+    color: #374151;
+  }
+
+  .math-solution h2 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #1f2937;
+    margin-bottom: 1rem;
+  }
+
+  .math-solution h3 {
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #1f2937;
+    margin: 1.5rem 0 1rem;
+  }
+
+  .math-solution p {
+    margin-bottom: 1rem;
+  }
+
+  .math-solution strong {
+    font-weight: 600;
+    color: #1f2937;
+  }
+
+  .math-solution em {
+    font-style: italic;
+  }
+
+  .math-step {
+    margin-bottom: 1.5rem;
+    padding-left: 1.5rem;
+    border-left: 3px solid #6366f1;
+  }
+
+  .math-step-header {
+    font-weight: 600;
+    color: #6366f1;
+    margin-bottom: 0.5rem;
+  }
+
+  .math-expression {
+    display: inline-block;
+    margin: 0.5rem 0;
+    padding: 0.5rem;
+    background-color: #f3f4f6;
+    border-radius: 0.375rem;
+    font-family: 'Times New Roman', serif;
+  }
+
+  .math-section {
+    margin-bottom: 2rem;
+  }
+
+  .math-section-title {
+    font-weight: 600;
+    color: #1f2937;
+    margin-bottom: 0.75rem;
+    padding-bottom: 0.25rem;
+    border-bottom: 1px solid #e5e7eb;
+  }
     .drop-zone {
       border: 2px dashed #d1d5db;
       transition: all 0.3s ease;
