--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MathSolve</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>MathSolve AI | Solusi Matematika</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary: #4f46e5;
+      --primary-light: #6366f1;
+      --primary-dark: #4338ca;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f9fafb;
+      overflow-x: hidden;
+    }
+
+    .card {
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      max-width: 100%;
+    }
+
+    .card:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .text-container {
+      max-width: 100%;
+      overflow-x: hidden;
+      word-break: break-word;
+      overflow-wrap: break-word;
+    }
+
+    .btn-primary {
+      background-color: var(--primary);
+      color: #fff;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.375rem;
+      font-weight: 500;
+      transition: background-color 0.2s ease;
+    }
+
+    .btn-primary:hover {
+      background-color: var(--primary-dark);
+    }
+
+    /* Responsive Adjustments */
+    @media (max-width: 768px) {
+      .container {
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+      h1 {
+        font-size: 1.75rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
+      p {
+        font-size: 0.9em;
+      }
+      .btn-primary {
+        padding: 0.5rem 1rem;
+        font-size: 0.9em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+      h2 {
+        font-size: 1.25rem;
+      }
+      p {
+        font-size: 0.85em;
+      }
+      .btn-primary {
+        padding: 0.5rem 0.75rem;
+        font-size: 0.85em;
+      }
+    }
+  </style>
 </head>
-<body class="bg-gray-100 font-sans">
-  <header class="bg-blue-600 text-white py-4">
-    <div class="container mx-auto text-center">
-      <h1 class="text-3xl font-bold">MathSolve</h1>
-      <p>Solve math problems with AI-powered image analysis</p>
+<body class="min-h-screen bg-gray-50">
+  <!-- Header -->
+  <header class="bg-white shadow-sm sticky top-0 z-50">
+    <div class="container mx-auto px-4 sm:px-6 py-4">
+      <div class="flex justify-between items-center">
+        <div class="flex items-center space-x-3">
+          <div class="bg-indigo-100 p-2 rounded-lg">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-indigo-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 3v2m6-2v2M9 19v2m6-2v2M5 9H3m2 6H3m18-6h-2m2 6h-2M7 19h10a2 2 0 002-2V7a2 2 0 00-2-2H7a2 2 0 00-2 2v10a2 2 0 002 2zM9 9h6v6H9V9z" />
+            </svg>
+          </div>
+          <h1 class="text-lg sm:text-xl font-bold text-gray-800">MathSolve AI</h1>
+        </div>
+        <div class="flex items-center space-x-2 sm:space-x-4">
+          <a href="/login.html" class="btn-primary">Login dengan Google</a>
+        </div>
+      </div>
     </div>
   </header>
-  <main class="container mx-auto py-8 text-center">
-    <h2 class="text-2xl mb-4">Get Started</h2>
-    <p class="mb-6">Upload a math problem image and get a detailed solution in seconds!</p>
-    <a href="/login.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Login with Google</a>
+
+  <!-- Main Content -->
+  <main class="container mx-auto px-4 sm:px-6 py-8 text-center">
+    <div class="card bg-white rounded-lg p-4 sm:p-6 max-w-2xl mx-auto">
+      <div class="text-container">
+        <h2 class="text-lg sm:text-xl font-semibold text-gray-800 mb-4">Mulai Sekarang</h2>
+        <p class="text-xs sm:text-sm text-gray-600 mb-6">Unggah gambar soal matematika dan dapatkan solusi langkah demi langkah dalam hitungan detik!</p>
+        <a href="/login.html" class="btn-primary inline-block">Login dengan Google</a>
+      </div>
+    </div>
   </main>
 </body>
 </html>
