--- a/public/login.html
+++ b/public/login.html
@@ -1,15 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - MathSolve</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Login - MathSolve AI</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --primary: #4f46e5;
+      --primary-light: #6366f1;
+      --primary-dark: #4338ca;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f9fafb;
+      overflow-x: hidden;
+    }
+
+    .card {
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      max-width: 100%;
+    }
+
+    .card:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .text-container {
+      max-width: 100%;
+      overflow-x: hidden;
+      word-break: break-word;
+      overflow-wrap: break-word;
+    }
+
+    .btn-primary {
+      background-color: var(--primary);
+      color: #fff;
+      padding: 0.75rem 1.5rem;
+      border-radius: 0.375rem;
+      font-weight: 500;
+      transition: background-color 0.2s ease;
+    }
+
+    .btn-primary:hover {
+      background-color: var(--primary-dark);
+    }
+
+    /* Responsive Adjustments */
+    @media (max-width: 768px) {
+      .container {
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
+      .card {
+        padding: 1rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
+      p {
+        font-size: 0.9em;
+      }
+      .btn-primary {
+        padding: 0.5rem 1rem;
+        font-size: 0.9em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .card {
+        padding: 0.75rem;
+      }
+      h2 {
+        font-size: 1.25rem;
+      }
+      p {
+        font-size: 0.85em;
+      }
+      .btn-primary {
+        padding: 0.5rem 0.75rem;
+        font-size: 0.85em;
+      }
+    }
+  </style>
 </head>
-<body class="bg-gray-100 font-sans flex items-center justify-center min-h-screen">
-  <div class="bg-white p-8 rounded shadow-md text-center">
-    <h2 class="text-2xl mb-4">Login to MathSolve</h2>
-    <a href="/api/auth/google" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">Login with Google</a>
+<body class="min-h-screen bg-gray-50 flex items-center justify-center">
+  <div class="card bg-white p-4 sm:p-8 rounded-lg shadow-md text-center max-w-md w-full">
+    <div class="text-container">
+      <h2 class="text-lg sm:text-xl font-semibold text-gray-800 mb-4">Login ke MathSolve AI</h2>
+      <p class="text-xs sm:text-sm text-gray-600 mb-6">Masuk dengan akun Google Anda untuk mulai menggunakan aplikasi</p>
+      <a href="/api/auth/google" class="btn-primary inline-block">Login dengan Google</a>
+    </div>
   </div>
 </body>
 </html>
